# ros2_orchestrator

./: CMakeLists.txt  README.md  package.xml
config/: config.json
launch/: orchestrate.launch.py
